--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,44 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Expanse Tracker</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
-      crossorigin="anonymous"
-    />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 
-    <script
-      defer
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-      crossorigin="anonymous"
-    ></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <style>
-      body {
-        padding-top: 50px;
-      }
+        body {
+            padding-top: 50px;
+        }
+        
     </style>
   </head>
+
   <body>
     <div class="container" align="center">
       <div class="row">
         <div>
-          <h2>Expanse Tracker</h2>
+          <h2>Expense Tracker</h2>
         </div>
         <div>
-          <form onsubmit="addExpanse(event)" class="form-horizontal">
+          <form onsubmit="addExpense(event)" class="form-horizontal">
             <div class="form-group">
               <div class="mb-3">
-                <label for="expanse_amount">Expanse Amount</label>
+                <label for="expense_amount">Expense Amount</label>
                 <input
                   type="number"
-                  name="expanse_amount"
-                  id="expanse_amount"
+                  name="expense_amount"
+                  id="expense_amount"
                   required
                 />
               </div>
@@ -79,27 +71,30 @@
       </div>
     </div>
   </body>
-  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
   <script>
-    async function addExpanse(event) {
+    async function addExpense(event) {
       try {
         event.preventDefault();
-        const exp_amount = event.target.expanse_amount.value;
+        const exp_amount = event.target.expense_amount.value;
         const desc = event.target.desc.value;
         const category = event.target.category.value;
 
-        console.log(exp_amount, desc, category);
         const object = {
           exp_amount,
           desc,
           category,
         };
         //console.log(object);
-        const addResponse = await axios.post("", obj);
+        const addResponse = await axios.post(
+            "http://127.0.0.1:3000/add_expense",
+            object
+        );
 
         if (addResponse.status === 201) {
           console.log("data inserted succesfully");
-          show_on_list(addResponse.data);
+          console.log(addResponse.data);
+          show_on_list(addResponse.data.data);
         } else {
           console.log("data insertion unsuccesfull");
         }
@@ -108,88 +103,45 @@
       }
     }
 
-    function show_on_list(obj){
-        try{
-            const parentElem = document.getElementById("items");
-            const childElem = `<li id=${obj.id}>${obj.exp_amount}-${obj.desc}<button onclick=deleteUser('${obj.id}')>Delete</button><button onclick=editUserDetails('${obj.id}','${obj.exp_amount}','${obj.desc}','${obj.category}')>Edit</button></li>`;
-            parentElem.innerHTML = parentElem.innerHTML + childElem;
-        }
-        catch(error){
-            console.log(error);
-        }
+    function show_on_list(obj) {
+      try {
+        const parentElem = document.getElementById("items");
+        const childElem = `<li id=${obj.id}>${obj.exp_amount}-${obj.desc}-${obj.category}<button onclick=deleteExpanse('${obj.id}')>Delete</button><button onclick=editExpanse('${obj.id}','${obj.exp_amount}','${obj.desc}','${obj.category}')>Edit</button></li>`;
+        parentElem.innerHTML = parentElem.innerHTML + childElem;
+      } catch (error) {
+        console.log(error);
+      }
     }
 
-    function delete_expanse_from_list(expanseId){
-        try{
-            const parentElem = document.getElementById('items');
-            const childElem = document.getElementById(expanseId);
-            parentElem.removeChild(childElem);
-        }
-        catch(error){
-            console.log(error);
-        }
+    function delete_expanse_from_list(expanseId) {
+      try {
+        const parentElem = document.getElementById("items");
+        const childElem = document.getElementById(expanseId);
+        parentElem.removeChild(childElem);
+      } catch (error) {
+        console.log(error);
+      }
     }
 
-    async function deleteExpanse(expanseId){
-        try{
-            const deleteResponse = await axios.delete(``);
-            if (deleteResponse.status  === 200){
-                console.log("data is deleted from backend");
-                delete_expanse_from_list(expanseId);
-            }else{
-                console.log("data is not deleted from backend");
-            }
+    async function deleteExpanse(expanseId) {
+      try {
+        const deleteResponse = await axios.delete(`http://127.0.0.1:3000/delete_expense/${expanseId}`);
+        if (deleteResponse.status === 200) {
+          console.log("data is deleted from backend");
+          delete_expanse_from_list(expanseId);
+        } else {
+          console.log("data is not deleted from backend");
         }
-        catch(error){
-            console.log(error);
-        }
+      } catch (error) {
+        console.log(error);
+      }
     }
 
-    async function editExpanse(){
-        try{
-
-        }
-        catch(error){
-            console.log(error);
-        }
+    async function editExpanse() {
+      try {
+      } catch (error) {
+        console.log(error);
+      }
     }
-
-    // function show_on_list(object){
-    //     //console.log(object);
-    //     const parentElem = document.getElementById("items");
-    //     const childElem = document.createElement("li");
-    //     //childElem.class = "list-group";
-    //     childElem.textContent = object.exp_amount + "-" + object.desc + "-" + object.category;
-
-    //     //add delete button
-    //     const deleteButton = document.createElement('input');
-    //     deleteButton.type = 'button';
-    //     deleteButton.value = 'Delete';
-
-    //     deleteButton.onclick = () =>{
-    //         localStorage.removeItem(object.id);
-    //         parentElem.removeChild(childElem);
-    //     }
-
-    //     //add edit button
-    //     const editButton = document.createElement('input');
-    //     editButton.type = 'button';
-    //     editButton.value = 'Edit';
-    //     editButton.onclick = () =>{
-    //         console.log("clicked");
-    //         localStorage.removeItem(object.id);
-    //         parentElem.removeChild(childElem);
-    //         document.getElementById("expanse_amount").value = object.exp_amount;
-    //         document.getElementById("desc").value = object.desc;
-    //         document.getElementById("category").value = object.category;
-    //     }
-
-    //     //add delete button to child
-    //     childElem.append(deleteButton);
-    //     //add edit button to child
-    //     childElem.append(editButton);
-    //     //add child element to parent
-    //     parentElem.append(childElem);
-    // }
   </script>
 </html>
